--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,4 +1,20 @@
 html {
 	/* stylelint-disable-next-line declaration-property-unit-allowed-list */
 	font-size: 62.5%;
+	@apply scroll-smooth;
+}
+
+// PAGE TRANSITIONS
+.page-enter-active,
+.page-leave-active {
+	transition: all 0.6s;
+}
+.page-enter-from {
+	opacity: 0;
+	filter: blur(1rem);
+}
+
+.page-leave-to {
+	opacity: 0;
+	filter: blur(1rem);
 }
