--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -4,16 +4,18 @@ html {
 }
 
 // PAGE TRANSITIONS
-.page-enter-active,
-.page-leave-active {
+.page-enter-active > *,
+.page-leave-active > *,
+.page-leave-active,
+.page-enter-active {
 	transition: all 0.6s;
 }
-.page-enter-from {
+.page-enter-from > * {
 	opacity: 0;
 	filter: blur(1rem);
 }
 
-.page-leave-to {
+.page-leave-to > * {
 	opacity: 0;
 	filter: blur(1rem);
 }
