--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -19,3 +19,27 @@ html {
 	opacity: 0;
 	filter: blur(1rem);
 }
+// ORGANISM MODAL TRANSITION
+
+.modal-leave-active,
+.modal-enter-active {
+	transition: all 0.6s;
+	& > .organism-modal__content {
+		transition: all 0.6s;
+	}
+}
+.modal-enter-from {
+	opacity: 0;
+	& > .organism-modal__content {
+		filter: blur(1rem);
+		transform: translateY(2rem);
+	}
+}
+
+.modal-leave-to {
+	opacity: 0;
+	& > .organism-modal__content {
+		filter: blur(1rem);
+		transform: translateY(2rem);
+	}
+}
